@@ -2,6 +2,16 @@ SVN $Id$
 SVN $URL$
 ===============================================================================
 Tag Creator: mlevy
+Developers:  klindsay
+Tag Date:    21 Nov 2013
+Tag Name:    pop2/trunk_tags/cesm_pop_2_1_20131121a
+Tag Summary: Bugfix in ecosys module (see bugzilla #1866): Fe input was
+             over-writing the atmospheric Fe flux instead of being added.
+
+Files Modified:
+M       source/ecosys_mod.F90
+===============================================================================
+Tag Creator: mlevy
 Developers:  njn01
 Tag Date:    21 Nov 2013
 Tag Name:    pop2/trunk_tags/cesm_pop_2_1_20131121
